[gd_scene load_steps=57 format=3 uid="uid://dcb260rwf1sj2"]

[ext_resource type="Script" path="res://entities/player/scripts/player.gd" id="1_6mp8f"]
[ext_resource type="Script" path="res://entities/player/scripts/state/PlayerStateMachine.gd" id="1_v1kjj"]
[ext_resource type="Script" path="res://entities/player/scripts/state/Idle.gd" id="2_tnqbq"]
[ext_resource type="Script" path="res://entities/player/scripts/state/functionality/IdleAttackInput.gd" id="3_eve5q"]
[ext_resource type="Script" path="res://entities/player/scripts/state/functionality/UseItemInput.gd" id="4_b1cho"]
[ext_resource type="Script" path="res://entities/player/scripts/state/functionality/IdleWeaponHandler.gd" id="5_8efs7"]
[ext_resource type="PackedScene" uid="uid://blfvfc7exomsg" path="res://items/shared/scenes/GameItems.tscn" id="5_ht5ei"]
[ext_resource type="Script" path="res://entities/player/scripts/state/Windup.gd" id="6_1456h"]
[ext_resource type="Script" path="res://entities/player/scripts/state/functionality/InputAttackCancel.gd" id="7_krbbd"]
[ext_resource type="Script" path="res://entities/player/scripts/state/Swing.gd" id="8_541qp"]
[ext_resource type="Script" path="res://entities/player/scripts/state/Recovery.gd" id="9_uqlww"]
[ext_resource type="Script" path="res://entities/player/scripts/state/AttackCancel.gd" id="10_sqvf5"]
[ext_resource type="Script" path="res://entities/player/scripts/state/AttackRecoil.gd" id="11_pup7f"]
[ext_resource type="Script" path="res://entities/player/scripts/state/BlockStart.gd" id="12_7tfu5"]
[ext_resource type="Script" path="res://entities/player/scripts/state/Blocking.gd" id="13_0isu0"]
[ext_resource type="Script" path="res://entities/player/scripts/state/BlockEnding.gd" id="14_tgg0p"]
[ext_resource type="Script" path="res://entities/player/scripts/state/Eating.gd" id="15_tp5ui"]
[ext_resource type="AudioStream" uid="uid://cbmbogbdgbf1p" path="res://world/shared/sounds/ambience/ghostly_windy_ambience.wav" id="16_rljpy"]
[ext_resource type="Script" path="res://items/inventory/GearManager.gd" id="17_amwtu"]
[ext_resource type="Script" path="res://items/equippable/shared/scripts/EquipmentSlotHelper.gd" id="19_auhrk"]
[ext_resource type="Script" path="res://items/inventory/InventoryManager.gd" id="19_f8is2"]
[ext_resource type="Script" path="res://entities/player/scripts/sounds/RandomAmbientSounds.gd" id="21_63v10"]
[ext_resource type="Script" path="res://items/inventory/HotbarManager.gd" id="21_eh733"]
[ext_resource type="Script" path="res://items/equippable/shared/scripts/EquipmentHelper.gd" id="21_lqqul"]
[ext_resource type="Script" path="res://entities/player/scripts/MouseMovement.gd" id="22_1rybo"]
[ext_resource type="Script" path="res://entities/player/scripts/DirectionalMovement.gd" id="23_rggqs"]
[ext_resource type="Script" path="res://entities/player/scripts/DevModeMovement.gd" id="24_pt1r8"]
[ext_resource type="Script" path="res://entities/player/scripts/MovementSounds.gd" id="26_2mhyc"]
[ext_resource type="Script" path="res://entities/player/scripts/CrouchInput.gd" id="26_61fuf"]
[ext_resource type="Script" path="res://entities/player/scripts/sounds/AttackSounds.gd" id="27_dh01p"]
[ext_resource type="Script" path="res://entities/shared/scripts/GetDamagedSounds.gd" id="29_tw623"]
[ext_resource type="Script" path="res://skills/health/scripts/Health.gd" id="30_rb013"]
[ext_resource type="Script" path="res://skills/endurance/scripts/Endurance.gd" id="31_ux8sm"]
[ext_resource type="Script" path="res://skills/stealth/scripts/Stealth.gd" id="32_slno1"]
[ext_resource type="Script" path="res://entities/player/scripts/ColliderFunctionality.gd" id="33_xsv4u"]
[ext_resource type="PackedScene" uid="uid://csgf4qcsol5ih" path="res://ui/look_at_text.tscn" id="34_a5qka"]
[ext_resource type="Script" path="res://entities/player/scripts/HeadScript.gd" id="34_nmqel"]
[ext_resource type="PackedScene" uid="uid://ctqtltwdstq8w" path="res://ui/Inventory.tscn" id="35_36exr"]
[ext_resource type="Script" path="res://entities/player/scripts/FrontLight.gd" id="36_0jm0o"]
[ext_resource type="Shader" path="res://shaders/DamageVignette.gdshader" id="36_1ahqv"]
[ext_resource type="Script" path="res://entities/player/scripts/SetCamera.gd" id="36_2o1vv"]
[ext_resource type="PackedScene" uid="uid://db1md1x1bc2h4" path="res://ui/StatusBars.tscn" id="36_54iry"]
[ext_resource type="Script" path="res://shaders/DamageVignette.gd" id="37_wyik8"]
[ext_resource type="Shader" path="res://shaders/red_overlay.gdshader" id="38_62aiw"]
[ext_resource type="Script" path="res://ui/FPSCounter.gd" id="38_l08d4"]
[ext_resource type="Script" path="res://shaders/RedOverlay.gd" id="39_24o3p"]
[ext_resource type="Shader" path="res://shaders/vignette.gdshader" id="40_6mr1p"]
[ext_resource type="Script" path="res://shaders/VignetteHealth.gd" id="41_22i2c"]
[ext_resource type="Shader" path="res://shaders/PixelShader.gdshader" id="42_qnj6d"]
[ext_resource type="Script" path="res://entities/player/scripts/PlayerInteractWithObject.gd" id="49_qqrxn"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_gdq8c"]
radius = 0.2
height = 1.2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a810w"]
shader = ExtResource("36_1ahqv")
shader_parameter/vignette_intensity = 3.0
shader_parameter/vignette_opacity = 0.0
shader_parameter/vignette_rgb = Color(1, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_iueqj"]
shader = ExtResource("38_62aiw")
shader_parameter/opacity = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_t873o"]
shader = ExtResource("40_6mr1p")
shader_parameter/vignette_intensity = 0.15
shader_parameter/vignette_opacity = 0.0
shader_parameter/vignette_rgb = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_656pa"]
shader = ExtResource("42_qnj6d")
shader_parameter/pixelation_level = 92.0

[sub_resource type="BoxShape3D" id="BoxShape3D_qcmu2"]
size = Vector3(1, 2, 1)

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3, 1)
disable_mode = 2
collision_layer = 32
collision_mask = 9
script = ExtResource("1_6mp8f")
metadata/Camera = NodePath("Head/Camera")
metadata/IsPlayer = true

[node name="PlayerStateMachine" type="Node" parent="."]
script = ExtResource("1_v1kjj")

[node name="Idle" type="Node" parent="PlayerStateMachine"]
script = ExtResource("2_tnqbq")
endurance_node_path = NodePath("../../Skills/Endurance")

[node name="AttackInput" type="Node" parent="PlayerStateMachine/Idle"]
script = ExtResource("3_eve5q")

[node name="UseItemInput" type="Node" parent="PlayerStateMachine/Idle"]
script = ExtResource("4_b1cho")

[node name="ItemHandler" type="Node" parent="PlayerStateMachine/Idle"]
script = ExtResource("5_8efs7")

[node name="AttackWindup" type="Node" parent="PlayerStateMachine"]
script = ExtResource("6_1456h")

[node name="InputAttackCancel" type="Node" parent="PlayerStateMachine/AttackWindup"]
script = ExtResource("7_krbbd")

[node name="AttackSwing" type="Node" parent="PlayerStateMachine"]
script = ExtResource("8_541qp")
endurance_node_path = NodePath("../../Skills/Endurance")

[node name="AttackRecovery" type="Node" parent="PlayerStateMachine"]
script = ExtResource("9_uqlww")

[node name="AttackCancel" type="Node" parent="PlayerStateMachine"]
script = ExtResource("10_sqvf5")

[node name="AttackRecoil" type="Node" parent="PlayerStateMachine"]
script = ExtResource("11_pup7f")

[node name="BlockStart" type="Node" parent="PlayerStateMachine"]
script = ExtResource("12_7tfu5")

[node name="Blocking" type="Node" parent="PlayerStateMachine"]
script = ExtResource("13_0isu0")

[node name="BlockEnding" type="Node" parent="PlayerStateMachine"]
script = ExtResource("14_tgg0p")

[node name="Eating" type="Node" parent="PlayerStateMachine"]
script = ExtResource("15_tp5ui")

[node name="UseItemInput" type="Node" parent="PlayerStateMachine/Eating"]
script = ExtResource("4_b1cho")

[node name="Gear" type="Node" parent="."]
script = ExtResource("17_amwtu")
metadata/GameItems = ExtResource("5_ht5ei")

[node name="Inventory" type="Node" parent="Gear"]
script = ExtResource("19_f8is2")

[node name="Slots" type="Node" parent="Gear/Inventory"]
metadata/NumSlots = 10

[node name="Equipment" type="Node" parent="Gear"]

[node name="Slots" type="Node" parent="Gear/Equipment"]

[node name="Weapon" type="Node" parent="Gear/Equipment/Slots"]
script = ExtResource("19_auhrk")

[node name="Hotbar" type="Node" parent="Gear" node_paths=PackedStringArray("equipment_helper", "camera")]
script = ExtResource("21_eh733")
equipment_helper = NodePath("../EquipmentHelper")
camera = NodePath("../../Head/Camera")
state_machine_node_path = NodePath("../../PlayerStateMachine")

[node name="Slots" type="Node" parent="Gear/Hotbar"]
metadata/NumSlots = 3

[node name="EquipmentHelper" type="Node" parent="Gear"]
script = ExtResource("21_lqqul")

[node name="MovementSystem" type="Node" parent="."]

[node name="MouseMovement" type="Node" parent="MovementSystem"]
script = ExtResource("22_1rybo")
metadata/Camera = NodePath("../../Head/Camera")
metadata/Player = NodePath("../..")

[node name="DirectionalMovement" type="Node" parent="MovementSystem" node_paths=PackedStringArray("player", "camera")]
script = ExtResource("23_rggqs")
player = NodePath("../..")
camera = NodePath("../../Head/Camera")

[node name="DevModeMovement" type="Node" parent="MovementSystem/DirectionalMovement"]
script = ExtResource("24_pt1r8")

[node name="MovementSounds" type="Node" parent="MovementSystem" node_paths=PackedStringArray("audio_stream")]
script = ExtResource("26_2mhyc")
audio_stream = NodePath("../../FootstepSoundPlayer")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="MovementSystem/MovementSounds"]

[node name="CrouchInput" type="Node" parent="MovementSystem"]
script = ExtResource("26_61fuf")

[node name="Sounds" type="Node" parent="."]

[node name="Attacks" type="Node" parent="Sounds"]
script = ExtResource("27_dh01p")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Sounds/Attacks"]

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="Sounds/Attacks"]
volume_db = -12.071

[node name="AudioStreamHitObj" type="AudioStreamPlayer" parent="Sounds/Attacks"]
volume_db = -6.592

[node name="RandomAmbientSounds" type="Node" parent="Sounds"]
script = ExtResource("21_63v10")
metadata/CameraPath = NodePath("../../Head/Camera")

[node name="GetDamagedSounds" type="AudioStreamPlayer" parent="Sounds" node_paths=PackedStringArray("thing_to_track")]
bus = &"ReverbBus"
script = ExtResource("29_tw623")
thing_to_track = NodePath("../..")
possible_sounds = ["res://entities/actors/shared/sounds/damage/flesh-metal/GOREStab_Designed Slash Gore 03_DDUMAIS_NONE.wav", "res://entities/actors/shared/sounds/damage/flesh-metal/GOREStab_Designed Slash Gore 04_DDUMAIS_NONE.wav", "res://entities/actors/shared/sounds/damage/flesh-metal/GOREStab_Designed Slash Gore 05_DDUMAIS_NONE.wav", "res://entities/actors/shared/sounds/damage/flesh-metal/GOREStab_Designed Slash Gore 06_DDUMAIS_NONE.wav", "res://entities/actors/shared/sounds/damage/flesh-metal/GOREStab_Designed Slash Gore 07_DDUMAIS_NONE.wav", "res://entities/actors/shared/sounds/damage/flesh-metal/GOREStab_Designed Slash Gore 09_DDUMAIS_NONE.wav", "res://entities/actors/shared/sounds/damage/flesh-metal/GOREStab_Designed Slash Gore 11_DDUMAIS_NONE.wav"]
pitch_min = 0.5
pitch_max = 0.7

[node name="Skills" type="Node" parent="."]

[node name="Health" type="Node" parent="Skills"]
script = ExtResource("30_rb013")
level = 10
skill_name = "Health"
description = "Represents your overall wellbeing. Increases your hitpoints, i.e. how many hits you can take before dying."

[node name="Endurance" type="Node" parent="Skills"]
script = ExtResource("31_ux8sm")
level = 5

[node name="Stealth" type="Node" parent="Skills"]
script = ExtResource("32_slno1")
level = 5
skill_name = "Stealth"

[node name="ActiveEffects" type="Node" parent="."]

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0705414, 0)
shape = SubResource("CapsuleShape3D_gdq8c")
script = ExtResource("33_xsv4u")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.436481, 0)
script = ExtResource("34_nmqel")

[node name="Camera" type="Camera3D" parent="Head"]
current = true
fov = 80.0
script = ExtResource("36_2o1vv")

[node name="RayCast" type="RayCast3D" parent="Head/Camera"]
target_position = Vector3(0, 0, -50)
collision_mask = 3081
collide_with_areas = true

[node name="Lamp" type="Node3D" parent="Head"]

[node name="OmniLight3D" type="OmniLight3D" parent="Head/Lamp"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.644183, 0)
light_color = Color(0.839216, 0.513726, 0.321569, 1)
light_energy = 0.642
shadow_enabled = true
omni_range = 0.0
omni_attenuation = 0.707106

[node name="FrontLight" type="Node3D" parent="Head/Lamp" node_paths=PackedStringArray("camera")]
transform = Transform3D(1, 0, 0, 0, 0.99996, -0.00895342, 0, 0.00895342, 0.99996, 0, 0, 0)
script = ExtResource("36_0jm0o")
camera = NodePath("../../Camera")

[node name="SpotLight3D" type="SpotLight3D" parent="Head/Lamp/FrontLight"]
transform = Transform3D(1, 0, 0, 0, 1, 6.51926e-09, 0, -6.51926e-09, 1, 0, 0.916717, -0.0082081)
light_color = Color(0.603922, 0.611765, 0.572549, 1)
light_energy = 0.05
light_specular = 0.0
shadow_enabled = true
spot_range = 4.0
spot_attenuation = 0.5
spot_angle = 80.0

[node name="Cooldown" type="Timer" parent="."]
one_shot = true

[node name="FootstepSoundTimer" type="Timer" parent="."]

[node name="FootstepSoundPlayer" type="AudioStreamPlayer" parent="."]
pitch_scale = 1.18
bus = &"ReverbBus"

[node name="Ambience" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_rljpy")
pitch_scale = 0.76
autoplay = true
bus = &"ReverbBus"

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CanvasLayer" type="CanvasLayer" parent="HUD"]

[node name="FPSCounter" type="Label" parent="HUD/CanvasLayer"]
offset_right = 40.0
offset_bottom = 23.0
script = ExtResource("38_l08d4")

[node name="LookAtText" parent="HUD/CanvasLayer" instance=ExtResource("34_a5qka")]

[node name="Inventory" parent="HUD/CanvasLayer" instance=ExtResource("35_36exr")]
gear_path = NodePath("../../../Gear")

[node name="StatusBarsVBox" parent="HUD/CanvasLayer" instance=ExtResource("36_54iry")]

[node name="HealthBar" parent="HUD/CanvasLayer/StatusBarsVBox" index="0"]
health_node_path = NodePath("../../../../Skills/Health")

[node name="StaminaBar" parent="HUD/CanvasLayer/StatusBarsVBox" index="1"]
endurance_node_path = NodePath("../../../../Skills/Endurance")

[node name="ShaderStuff" type="CanvasLayer" parent="HUD"]

[node name="DamageVignette" type="ColorRect" parent="HUD/ShaderStuff"]
material = SubResource("ShaderMaterial_a810w")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("37_wyik8")

[node name="LowHealthRedOverlay" type="ColorRect" parent="HUD/ShaderStuff"]
material = SubResource("ShaderMaterial_iueqj")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("39_24o3p")

[node name="BlackVignette" type="ColorRect" parent="HUD/ShaderStuff"]
material = SubResource("ShaderMaterial_t873o")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("41_22i2c")

[node name="FunPixelShader" type="ColorRect" parent="HUD/ShaderStuff"]
show_behind_parent = true
z_index = -1
material = SubResource("ShaderMaterial_656pa")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Area3D" type="Area3D" parent="." groups=["PlayerDetection"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.555356, 0)
shape = SubResource("BoxShape3D_qcmu2")

[node name="InteractWithObject" type="Node" parent="."]
script = ExtResource("49_qqrxn")

[connection signal="on_hit" from="." to="HUD/ShaderStuff/DamageVignette" method="_on_hit"]
[connection signal="attack_clicked" from="PlayerStateMachine/Idle/AttackInput" to="PlayerStateMachine/Idle" method="_on_attack_input_attack_clicked"]
[connection signal="attack_cancelled" from="PlayerStateMachine/AttackWindup/InputAttackCancel" to="PlayerStateMachine/AttackWindup" method="_on_input_attack_cancelled"]
[connection signal="hotbar_item_changed" from="Gear/Hotbar" to="PlayerStateMachine/Idle/ItemHandler" method="_on_hotbar_item_changed"]
[connection signal="player_ground_movement" from="MovementSystem/DirectionalMovement" to="MovementSystem/MovementSounds" method="_on_directional_movement_player_ground_movement"]
[connection signal="health_changed" from="Skills/Health" to="HUD/ShaderStuff/LowHealthRedOverlay" method="_on_health_health_changed"]
[connection signal="health_changed" from="Skills/Health" to="HUD/ShaderStuff/BlackVignette" method="_on_health_health_changed"]
[connection signal="stamina_changed" from="Skills/Endurance" to="MovementSystem/DirectionalMovement" method="_on_endurance_stamina_changed"]
[connection signal="request_inv_and_hb_update" from="HUD/CanvasLayer/Inventory" to="Gear" method="_on_request_inv_and_hb_update"]

[editable path="HUD/CanvasLayer/StatusBarsVBox"]
